# ninn

./: .gitignore  Cargo.toml
examples/: bench_baseline.rs  bench_hs.rs  client.rs  dummy_server.rs  server.rs
handshake_measurements/: README.md
handshake_measurements/baseline/encaps kyber-512/base/: benchmark.json  estimates.json  raw.csv  tukey.json
handshake_measurements/baseline/encaps kyber-512/new/: sample.json
handshake_measurements/baseline/encaps kyber-512/report/: index.html
handshake_measurements/baseline/encaps sike-p434/new/: raw.csv  (+3 more)
handshake_measurements/ninn_ninn_Kyber512/: estimates.json  raw.csv  sample.json  tukey.json
handshake_measurements/ninn_ninn_Kyber512_report/: index.html
handshake_measurements/ninn_ninn_SIKE-p434/: estimates.json  raw.csv  sample.json  tukey.json
handshake_measurements/ninn_ninn_SIKE-p434_report/: index.html
handshake_measurements/ninn_ninn_none/: estimates.json  raw.csv  sample.json  tukey.json
handshake_measurements/ninn_ninn_none_report/: index.html
handshake_measurements/rs_go_Kyber512/: estimates.json  raw.csv  sample.json  tukey.json
handshake_measurements/rs_go_Kyber512_report/: index.html
handshake_measurements/rs_go_SIKE-p434/: estimates.json  raw.csv  sample.json  tukey.json
handshake_measurements/rs_go_SIKE-p434_report/: index.html
handshake_measurements/rs_go_none/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
handshake_measurements/rs_go_none_report/: index.html
src/: client.rs  conn_state.rs  crypto.rs  frame.rs  handshake.rs  lib.rs  packet.rs  server.rs
(+14 files in other folders)
