[package]
name = "ninn"
version = "0.1.0"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>", "Mathias Hall-Andersen <mathias@hall-andersen.dk>"]
description = "Futures-based QUIC implementation"
keywords = ["quic", "tokio", "noise"]
categories = ["network-programming"]
homepage = "https://github.com/nccgroup/ninn"
repository = "https://github.com/nccgroup/ninn"
license = "MIT/Apache-2.0"

[dependencies]
bytes = "0.4.7"
byteorder = "^1.2"
rust-crypto = "^0.2"
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
hex = "0.3.2"
log = "0.4"
tokio = "0.1"
tokio-core = "*"
rand = "=0.5.0-pre.2"
ring = "0.13.0-alpha"
webpki = "0.18.0-alpha"
webpki-roots = "0.14"
env_logger = "0.5"
lazy_static = "*"

[dependencies.rustls]
git = "https://github.com/ctz/rustls"
rev = "9a230c6d"
features = ["quic"]

[dependencies.snow]
git = "https://github.com/survived/snow.git"
branch = "hs_exposes_keys"
features = ["hfs"]

[dependencies.oqs]
git = "https://github.com/survived/oqs-rs.git"
branch = "liboqs-upgrade"

[dev-dependencies]
env_logger = "0.5"
untrusted = "0.6"
hex = "*"

[[bin]]
name = "client"
path = "examples/client.rs"

[[bin]]
name = "server"
path = "examples/server.rs"
